SKIF-CPLANE: обновление документации на платформе
